--- a/templates/main.html
+++ b/templates/main.html
@@ -4,7 +4,7 @@
 <head>
 
   <!-- Webpage Title -->
-  <title>PUMG</title>
+  <title>정글인의 책상</title>
 
   <!-- Required meta tags -->
   <meta charset="utf-8">
