--- a/templates/register.html
+++ b/templates/register.html
@@ -71,19 +71,19 @@
     <div class="jumbotron">
       <div class="form-group">
         <label for="userid">ID</label>
-        <input type="text" class="form-control" id="userid" placeholder="My ID">
+        <input type="text" class="form-control" id="userid" placeholder="아이디를 입력해주세요.">
       </div>
       <div class="form-group">
         <label for="userpw">PW</label>
-        <input type="password" class="form-control" id="userpw" placeholder="My Password">
+        <input type="password" class="form-control" id="userpw" placeholder="비밀번호를 입력해주세요.">
       </div>
       <div class="form-group">
         <label for="userpw">NAME</label>
-        <input type="text" class="form-control" id="username" placeholder=" My Name">
+        <input type="text" class="form-control" id="username" placeholder="본명을 입력해주세요.">
       </div>
       <div class="form-group">
         <label for="userpw">NICKNAME</label>
-        <input type="text" class="form-control" id="usernick" placeholder="My Nickname">
+        <input type="text" class="form-control" id="usernick" placeholder="별명을 입력해주세요.">
       </div>
       <button class="regi-button" onclick="register()">회원가입</button>
     </div>
