--- a/templates/login.html
+++ b/templates/login.html
@@ -50,7 +50,7 @@
             $.cookie('mytoken', response['token']);
 
             alert('로그인 완료!')
-            window.location.href = '/'
+            window.location.href = '/mypage'
           } else {
             // 로그인이 안되면 에러메시지를 띄웁니다.
             alert(response['msg'])
@@ -73,12 +73,12 @@
     <div class="jumbotron">
       <div class="form-group">
         <label for="userid">ID</label>
-        <input type="id" class="form-control" id="userid" aria-describedby="emailHelp" placeholder="My ID">
+        <input type="id" class="form-control" id="userid" aria-describedby="emailHelp" placeholder="아이디를 입력해주세요.">
       </div>
 
       <div class="form-group">
         <label for="userpw">PW</label>
-        <input type="password" class="form-control" id="userpw" placeholder="My Password">
+        <input type="password" class="form-control" id="userpw" placeholder="비밀번호를 입력해주세요.">
       </div>
 
       <div class="btns">
